# MyToolbox

./: .gitignore  CODEBUDDY.md  README.md  audio_processor.py  cli_interface.py  config.py  config_cli.py  error_handler.py  file_scanner.py  format_converter.py  main.py  output_generator.py  pyproject.toml  subtitle_generator.py  subtitle_models.py  subtitle_parsers.py  whisper_config.py  whisper_integration.py
.codebuddy/plan/coqui-tts-migration/: requirements.md  task-item.md
.codebuddy/plan/gui-support/: requirements.md  task-item.md
.codebuddy/plan/multi-mode-extension/: requirements.md  task-item.md
core/cli/: cli_interface.py
core/config/: config.py  config_error_handler.py  config_subtitle.py
core/utils/: error_handler.py  format_converter.py  output_generator.py
modules/: audio_aligner.py  audio_processor.py  subtitle_parsers.py
modules/training/: __init__.py  coqui_checker.py  coqui_exporter.py  coqui_trainer.py  mimic3_checker.py  mimic3_trainer.py  train_config.py  train_controller.py  train_data_manager.py  train_reporter.py
modules/whisper/: subtitle_generator.py  whisper_integration.py  whisper_subtitle_generator.py
uploads/onnx_models/: 20260204_130159_wokie.onnx
web/: __init__.py  app.py  task_manager.py
web/routes/: __init__.py  main.py  train.py  upload.py  whisper.py
web/static/js/: train.js  (+2 more)
web/templates/: base.html  index.html  onnx_tts.html  train.html  whisper.html
whisper_engines/: __init__.py  base_engine.py  engine_registry.py  engine_selector.py  faster_whisper_engine.py  openai_whisper_engine.py  whisperkit_engine.py
(+16 files in other folders)
